Newsletter commit part added

--- a/index.html
+++ b/index.html
@@ -34,12 +34,39 @@
                     <a href="">Know More</a>
                 </div>
             </div>
-
         </div>
     </div>
     <!---About Me! Part End-------->
-
-
+    <!---My Services Part start-------->
+    <div class="container_full">
+        <div class="container">
+            <div>
+                <h1>My Services</h1>
+                <div class="My_services_single_area">
+                    <img src="img/Screenshot_1.jpg" alt="">
+                    <h3>Bussiness Website</h3>
+                    <p>In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate
+                        the
+                    </p>
+                    <a href="#">Live Preview</a>
+                    <a href="#">Know More About Me</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!---My Services Part End-------->
+    <!---Newsletter Part Strat-------->
+    <div class="container_full">
+        <div class="container">
+            <div>
+                <h1>Newsletter</h1>
+                <p>Subscribe to our newsletter to receive our latest news</p>
+                <input type="email" name="" id="">
+                <a href="#">Subscrib</a>
+            </div>
+        </div>
+    </div>
+    <!---Newsletter Part End-------->
 
 
 
