contact Us commit added

--- a/index.html
+++ b/index.html
@@ -61,12 +61,29 @@
             <div>
                 <h1>Newsletter</h1>
                 <p>Subscribe to our newsletter to receive our latest news</p>
-                <input type="email" name="" id="">
+                <input type="email" name="" id="" placeholder="Email">
                 <a href="#">Subscrib</a>
             </div>
         </div>
     </div>
     <!---Newsletter Part End-------->
+    <!---Contact Us Part Start-------->
+    <div class="container_full">
+        <div class="container">
+            <div>
+                <h1>Contact Us</h1>
+                Name: <br />
+                <input type="text" placeholder="Full Name"><br />
+                Email Address:<br>
+                <input type="email" name="" id="" placeholder="Email Address"><br>
+                Your Message: <br>
+                <textarea name="" id="" cols="10" rows="5">
+                </textarea><br>
+                <button type="submit">Submit</button>
+            </div>
+        </div>
+    </div>
+    <!---Contact Us Part End-------->
 
 
 
