style commit added

--- a/index.html
+++ b/index.html
@@ -12,9 +12,16 @@
 
 <body>
     <!---Background Image Part Start---->
-    <div class="container_full">
+    <div class="container_full bakground_bg">
         <div class="container">
-            <img src="img/first-1.jpg" alt="background image">
+            <div class="background_1st_img">
+                <div class="Text_center">
+                    <h3>Hello, I'm</h3>
+                    <h1>James Cameron</h1>
+                    <h3>Full-Stack Web developer</h3>
+                </div>
+                <img src="img/first-1.jpg" alt="background image">
+            </div>
         </div>
     </div>
     <!---Background Image Part End---->
