--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
     <!---About Me! Part Start--------->
     <div class="container_full">
         <div class="container">
-            <div>
-                <h1>About Me!</h1>
+            <div id="about_me_part">
+                <h1 class="about_me_h1">About Me!</h1>
                 <div class="abt_me_left_side">
                     <img src="img/2nd-1.jpg" alt="profile picture">
                 </div>
                 <div class="abt_me_right_side">
-                    <h3>Wnnan Know About Me?</h3>
+                    <h3>Wnna Know About Me?</h3>
                     <p>In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate
                         the visual form of a document or a typeface without relying on meaningful content. Lorem ipsum
-                        may be used as a placeholder before final copy is available. Wikipedia</p>
-                    <a href="">Know More</a>
+                        may be used as a placeholder before final copy is available.</p>
+                    <a class="know_More_about_me" href="">Know More</a>
                 </div>
             </div>
         </div>
