--- a/index.html
+++ b/index.html
@@ -47,16 +47,28 @@
     <!---My Services Part start-------->
     <div class="container_full">
         <div class="container">
-            <div>
+            <div class="services_part">
                 <h1>My Services</h1>
                 <div class="My_services_single_area">
                     <img src="img/Screenshot_1.jpg" alt="">
                     <h3>Bussiness Website</h3>
-                    <p>In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate
-                        the
+                    <p>In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate.
                     </p>
-                    <a href="#">Live Preview</a>
-                    <a href="#">Know More About Me</a>
+                    <span><a href="#">Live Preview</a< /span>
+                </div>
+                <div class="My_services_single_area single_area-2">
+                    <img src="img/Screenshot_1.jpg" alt="">
+                    <h3>Resturent Website</h3>
+                    <p>In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate.
+                    </p>
+                    <span><a href="#">Live Preview</a< /span>
+                </div>
+                <div class="My_services_single_area nomrgn_right single_area-3">
+                    <img src="img/Screenshot_1.jpg" alt="">
+                    <h3>Travelling Website</h3>
+                    <p>In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate.
+                    </p>
+                    <span><a href="#">Live Preview</a< /span>
                 </div>
             </div>
         </div>
