--- a/index.html
+++ b/index.html
@@ -54,60 +54,48 @@
                     <h3>Bussiness Website</h3>
                     <p>In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate.
                     </p>
-                    <span><a href="#">Live Preview</a< /span>
+                    <a href="#">Live Preview</a>
                 </div>
                 <div class="My_services_single_area single_area-2">
                     <img src="img/Screenshot_1.jpg" alt="">
                     <h3>Resturent Website</h3>
                     <p>In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate.
                     </p>
-                    <span><a href="#">Live Preview</a< /span>
+                    <a href="#">Live Preview</a>
                 </div>
                 <div class="My_services_single_area nomrgn_right single_area-3">
                     <img src="img/Screenshot_1.jpg" alt="">
                     <h3>Travelling Website</h3>
                     <p>In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate.
                     </p>
-                    <span><a href="#">Live Preview</a< /span>
+                    <a href="https://www.facebook.com">Live Preview</a </div>
                 </div>
             </div>
         </div>
-    </div>
-    <!---My Services Part End-------->
-    <!---Newsletter Part Strat-------->
-    <div class="container_full">
-        <div class="container">
-            <div>
-                <h1>Newsletter</h1>
-                <p>Subscribe to our newsletter to receive our latest news</p>
-                <input type="email" name="" id="" placeholder="Email">
-                <a href="#">Subscrib</a>
-            </div>
-        </div>
-    </div>
-    <!---Newsletter Part End-------->
-    <!---Contact Us Part Start-------->
-    <div class="container_full">
-        <div class="container">
-            <div>
-                <h1>Contact Us</h1>
-                Name: <br />
-                <input type="text" placeholder="Full Name"><br />
-                Email Address:<br>
-                <input type="email" name="" id="" placeholder="Email Address"><br>
-                Your Message: <br>
-                <textarea name="" id="" cols="10" rows="5">
+        <!---My Services Part End-------->
+
+        <!---Contact Us Part Start-------->
+        <div class="container_full">
+            <div class="container">
+                <div>
+                    <h1>Contact Us</h1>
+                    Name: <br />
+                    <input type="text" placeholder="Full Name"><br />
+                    Email Address:<br>
+                    <input type="email" name="" id="" placeholder="Email Address"><br>
+                    Your Message: <br>
+                    <textarea name="" id="" cols="10" rows="5">
                 </textarea><br>
-                <button type="submit">Submit</button>
+                    <button type="submit">Submit</button>
+                </div>
             </div>
         </div>
-    </div>
-    <!---Contact Us Part End-------->
+        <!---Contact Us Part End-------->
 
 
 
 
-    <!------
+        <!------
 <div class="container_full">
     <div class="container">
 
