--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
     <!---About Me! Part End-------->
     <!---My Services Part start-------->
-    <div class="container_full">
+    <div class="container_full my_services_bg">
         <div class="container">
             <div class="services_part">
                 <h1>My Services</h1>
@@ -72,30 +72,32 @@
                 </div>
             </div>
         </div>
-        <!---My Services Part End-------->
+    </div>
 
-        <!---Contact Us Part Start-------->
-        <div class="container_full">
-            <div class="container">
-                <div>
-                    <h1>Contact Us</h1>
-                    Name: <br />
-                    <input type="text" placeholder="Full Name"><br />
-                    Email Address:<br>
-                    <input type="email" name="" id="" placeholder="Email Address"><br>
-                    Your Message: <br>
-                    <textarea name="" id="" cols="10" rows="5">
+    <!---My Services Part End-------->
+
+    <!---Contact Us Part Start-------->
+    <div class="container_full">
+        <div class="container">
+            <div class="contact_form_area">
+                <h1>Contact Us</h1>
+                Name: <br />
+                <input type="text" placeholder="Full Name"><br />
+                Email Address:<br>
+                <input type="email" name="" id="" placeholder="Email Address"><br>
+                Your Message: <br>
+                <textarea name="" id="" cols="10" rows="5">
                 </textarea><br>
-                    <button type="submit">Submit</button>
-                </div>
+                <button type="submit">Submit</button>
             </div>
         </div>
-        <!---Contact Us Part End-------->
+    </div>
+    <!---Contact Us Part End-------->
 
 
 
 
-        <!------
+    <!------
 <div class="container_full">
     <div class="container">
 
