contact form added

--- a/index.html
+++ b/index.html
@@ -70,34 +70,44 @@
                     </p>
                     <a href="https://www.facebook.com">Live Preview</a </div>
                 </div>
+
             </div>
         </div>
-    </div>
 
-    <!---My Services Part End-------->
+        <!---My Services Part End-------->
 
-    <!---Contact Us Part Start-------->
-    <div class="container_full">
-        <div class="container">
-            <div class="contact_form_area">
+        <!---Contact Us Part Start-------->
+        <div class="container_full contact_us_bg">
+            <div class="container ">
                 <h1>Contact Us</h1>
-                Name: <br />
-                <input type="text" placeholder="Full Name"><br />
-                Email Address:<br>
-                <input type="email" name="" id="" placeholder="Email Address"><br>
-                Your Message: <br>
-                <textarea name="" id="" cols="10" rows="5">
-                </textarea><br>
-                <button type="submit">Submit</button>
+                <div class="contact_form">
+                    <form action="action_page.php">
+
+                        <label for="fname">First Name</label>
+                        <input type="text" id="fname" name="firstname" placeholder="Your name">
+
+                        <label for="lname">Last Name</label>
+                        <input type="text" id="lname" name="lastname" placeholder="Your last name">
+
+                        <label for="Email">Email</label><br>
+                        <input type="Email" id="lname" name="Email" placeholder="Email"> <br><br>
+
+                        <label for="Write something">Write something</label>
+                        <textarea id="subject" name="subject" placeholder="Write something.."
+                            style="height:200px"></textarea>
+
+                        <input type="submit" value="Submit">
+
+                    </form>
+                </div>
             </div>
         </div>
-    </div>
-    <!---Contact Us Part End-------->
+        <!---Contact Us Part End-------->
 
 
 
 
-    <!------
+        <!------
 <div class="container_full">
     <div class="container">
 
