css edit commit

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <!---Contact Us Part Start-------->
         <div class="container_full contact_us_bg">
             <div class="container ">
-                <h1>Contact Us</h1>
+                <h1 class="contact_us_h1">Contact Us</h1>
                 <div class="contact_form">
                     <form action="action_page.php">
 
