--- a/index.html
+++ b/index.html
@@ -103,8 +103,18 @@
             </div>
         </div>
         <!---Contact Us Part End-------->
+        <!---footer Part start-------->
 
-
+        <div class="container_full">
+            <div class="container">
+                <div class="footer_part">
+                    <ul>
+                        <li><a href=""></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <!---footer part End-------->
 
 
         <!------
